# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  spec.yaml
.github/workflows/: general.yml
configuration/: production.yaml
migrations/: 20260401031923_add_status_to_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
