[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
config = "0.14"
reqwest = { version = "0.12.26", default-features = false, features = ["rustls-tls", "json"] }
secrecy = { version = "0.8", features = ["serde"] }
# env_logger = "0.9"
# log = "0.4.29"
serde = { version = "1", features = ["derive"] }
serde-aux = "4.7.0"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "chrono", "uuid", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-actix-web = "0.7.20"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
uuid = { version = "1.19.0", features = ["v4"] }
validator = "0.20"

[dev-dependencies]
claims = "0.7"
fake = "4.4"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
rand = "0.10.0"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.6"
